# wascc-codec

./: Cargo.toml  README.md  build.rs  codec.json
examples/: codectest.rs
src/: blob.proto  blobstore.rs  capabilities.rs  core.proto  core.rs  eventstream.proto  eventstreams.rs  extras.proto  extras.rs  http.proto  http.rs  keyvalue.rs  kv.proto  lib.rs  logging.rs  messaging.proto  messaging.rs
