[package]
name = "wascc-codec"
version = "0.4.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "Encoding and decoding primitives for waSCC (WebAssembly Secure Capabilities Connector)"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-codec"
readme = "README.md"
keywords = ["webassembly", "wasm", "codec", "wascc"]
categories = ["wasm", "data-structures","encoding"]
homepage = "https://wascc.dev"

[badges]
travis-ci = { repository = "wascc/wascc-codec", branch = "master" }


[dependencies]
prost = "0.6.1"
bytes = "0.5.4" 
prost-types = "0.6.1"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"

[build-dependencies]
prost-build = "0.6.1"
