[package]
name = "wascc-codec"
version = "0.5.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "Encoding and decoding primitives for waSCC (WebAssembly Secure Capabilities Connector)"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-codec"
readme = "README.md"
keywords = ["webassembly", "wasm", "codec", "wascc"]
categories = ["wasm", "data-structures","encoding"]
homepage = "https://wascc.dev"

[badges]
travis-ci = { repository = "wascc/wascc-codec", branch = "master" }


[dependencies]
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
rmp-serde = "0.14.3"
log = { version="0.4.8", features =["std","serde"]}

